# deno_task_shell

./: .gitignore  Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
rust/: Cargo.toml
rust/src/: parser.rs
rust/src/shell/: mod.rs  test_builder.rs  types.rs
rust/src/shell/commands/: args.rs  cd.rs  echo.rs  executable.rs  export.rs  rm.rs
src/: child_process_tracker.rs  combinators.rs  commands.rs  environment.rs  fs_util.rs  lib.rs  parser.rs  shell.rs  shell_types.rs  test.rs  test_builder.rs
src/commands/: args.rs  cat.rs  cd.rs  cp_mv.rs  exit.rs  mkdir.rs  mod.rs  pwd.rs  rm.rs  sleep.rs  xargs.rs
src/parser/: mod.rs
src/shell/: child_process_tracker.rs  command.rs  execute.rs  fs_util.rs  mod.rs  shell.rs  test.rs  test_builder.rs  types.rs  which.rs
src/shell/commands/: args.rs  cat.rs  cd.rs  cp_mv.rs  echo.rs  error.rs  executable.rs  exit.rs  export.rs  head.rs  mkdir.rs  mod.rs  pwd.rs  rm.rs  set.rs  shopt.rs  sleep.rs  test.rs  unset.rs  xargs.rs
tests/: integration_test.rs  test_builder.rs
wasm/: Cargo.toml  Makefile.toml
