[package]
name = "deno_task_shell"
version = "0.4.0"
authors = ["the Deno authors"]
documentation = "https://docs.rs/deno_task_shell"
edition = "2021"
homepage = "https://deno.land/"
license = "MIT"
repository = "https://github.com/denoland/deno_task_shell"
description = "Cross platform scripting for deno task"

[features]
default = ["shell"]
shell = ["futures", "os_pipe", "path-dedot", "tokio"]
serialization = ["serde"]

[dependencies]
anyhow = "1.0.55"
futures = { version = "0.3.16", optional = true }
path-dedot = { version = "3.0.17", optional = true }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"], optional = true }
os_pipe = { version = "1.0.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
parking_lot = "0.12.0"
pretty_assertions = "1"
tempfile = "3.2.0"
