[package]
name = "deno_task_shell"
version = "0.17.0"
authors = ["the Deno authors"]
documentation = "https://docs.rs/deno_task_shell"
edition = "2021"
homepage = "https://deno.land/"
license = "MIT"
repository = "https://github.com/denoland/deno_task_shell"
description = "Cross platform scripting for deno task"

[features]
default = ["shell"]
shell = ["futures", "glob", "os_pipe", "path-dedot", "tokio", "tokio-util"]
serialization = ["serde"]

[dependencies]
anyhow = "1.0.75"
futures = { version = "0.3.29", optional = true }
glob = { version = "0.3.1", optional = true }
path-dedot = { version = "3.1.1", optional = true }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"], optional = true }
tokio-util = { version = "0.7.10", optional = true }
os_pipe = { version = "1.1.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
monch = "0.5.0"
thiserror = "1.0.58"

[dev-dependencies]
parking_lot = "0.12.1"
pretty_assertions = "1"
serde_json = "1.0.111"
tempfile = "3.8.1"
