[package]
name = "deno_task_shell_wasm"
version = "0.20.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_static_text = "0.8.2"
deno_task_shell = { path = "../rust", default-features = false, features = ["serialization"] }
once_cell = "1.16.0"
serde = "1"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "=0.2.97"
